--- a/modules/python-github.adoc
+++ b/modules/python-github.adoc
@@ -1,4 +1,4 @@
-## Lab: Deploying Python Code
+## Lab: Deploying Python Code with GitHub
 
 ### Application Description
 In this lab, we're going to deploy a backend service, developed in Python programming language that will expose 2 main REST endpoints to the visualizer application (`parksmap` web component that was deployed in the previous labs). The application will query for national parks information (including it's coordinates) that is stored in a Mongo database.
