--- a/modules/explore.adoc
+++ b/modules/explore.adoc
@@ -55,9 +55,9 @@ following confirmation message:
 
 [source]
 ----
-Login successful.
+You don't have any projects. You can try to create a new project, by running
 
-Using project "{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}".
+    oc new-project <projectname>
 ----
 
 Congratulations, you are now authenticated to the OpenShift server. The
@@ -81,19 +81,19 @@ During this lab, we are going to use a few different commands to make sure that
 things in the environment are working as expected.  Don't worry if you don't
 understand all of the terminology as we will cover it in detail in later labs.
 
-The first thing we want to do is switch to the *{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}* project. You
+The first thing we want to do is to create a new project called *userXXX-parks*. You
 can do this with the following command:
 
 [source]
 ----
-$ oc project {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
+$ oc new-project userXXX-parks
 ----
 
 You will see the following confirmation message:
 
 [source]
 ----
-Now using project "{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}" on server "https://{{CONSOLE_ADDRESS}}".
+Now using project userXXX-parks on server "https://{{CONSOLE_ADDRESS}}".
 ----
 
 ### The Web Console
@@ -120,8 +120,8 @@ something that looks like the following image:
 
 image::/images/explore-webconsole1.png[Web Console]
 
-Click on the *{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}* project. When you click on the
-*{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}* project, you will be taken to the project overview page
+Click on the *userXXX-parks* project. When you click on the
+*userXXX-parks* project, you will be taken to the project overview page
 which will list all of the routes, services, deployments, and pods that you have
 running as part of your project. There's nothing there now, but that's about to
 change.
