--- a/modules/docker.adoc
+++ b/modules/docker.adoc
@@ -58,7 +58,7 @@ a single non-exiting CMD to execute on start.
 ### Background: Containers and Pods
 
 Before we start digging in we need to understand how containers and *Pods* are
-related. Given the morning sessions where we discussed the OpenShift platform
+related. Given the previous lecture where we discussed the OpenShift platform
 and how it uses containers and *Pods*, we will not be covering the background on
 these technologies in this lab.  Instead, we will dive right in and start using
 them.
@@ -84,13 +84,13 @@ server, a log analyzer, and a file service to help manage uploaded files.
 
 In the web console's overview page you will see that there is a single *Pod* that
 was created by your actions. This *Pod* contains a single container, which
-happens to be the parks map application - a simple Spring Boot/Java application.
+happens to be the parks map application - a simple Python application.
 
 You can also examine *Pods* from the command line:
 
 [source]
 ----
-oc get pod
+oc get pods
 ----
 
 You should see output that looks similar to:
@@ -200,7 +200,7 @@ You should see output similar to the following:
 [source]
 ----
 NAME       CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
-parksmap   172.30.169.213   <none>        8080/TCP   3h
+parksmap-py   172.30.169.213   <none>        8080/TCP   3h
 ----
 
 In the above output, we can see that we have a *Service* named `parksmap` with an
@@ -216,7 +216,7 @@ following command to display the data in YAML:
 
 [source]
 ----
-oc get service parksmap -o yaml
+oc get service parksmap-py -o yaml
 ----
 
 You should see output similar to the following:
@@ -255,7 +255,7 @@ Take note of the `selector` stanza. Remember it.
 
 It is also of interest to view the JSON of the *Pod* to understand how OpenShift
 wires components together.  For example, run the following command to get the
-name of your `parksmap` *Pod*:
+name of your `parksmap-py` *Pod*:
 
 [source]
 ----
@@ -267,14 +267,14 @@ You should see output similar to the following:
 [source]
 ----
 NAME               READY     STATUS    RESTARTS   AGE
-parksmap-1-hx0kv   1/1       Running   0          3h
+parksmap-py-1-hx0kv   1/1       Running   0          3h
 ----
 
 Now you can view the detailed data for your *Pod* with the following command:
 
 [source]
 ----
-oc get pod parksmap-1-hx0kv -o yaml
+oc get pod parksmap-py-1-hx0kv -o yaml
 ----
 
 Under the `metadata` section you should see the following:
