--- a/modules/routes.adoc
+++ b/modules/routes.adoc
@@ -40,15 +40,15 @@ Now we need to get the *Service* name to expose:
 oc get services
 
 NAME       CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
-parksmap   172.30.169.213   <none>        8080/TCP   5h
+parksmap-py   172.30.169.213   <none>        8080/TCP   5h
 ----
 
 Once we know the *Service* name, creating a *Route* is a simple one-command task:
 
 [source]
 ----
-oc expose service parksmap
-route "parksmap" exposed
+oc expose service parksmap-py
+route "parksmap-py" exposed
 ----
 
 Verify the *Route* was created with the following command:
@@ -57,7 +57,7 @@ Verify the *Route* was created with the following command:
 ----
 $ oc get route
 NAME       HOST/PORT                                              PATH      SERVICES   PORT       TERMINATION
-parksmap   parksmap-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}             parksmap   8080-tcp
+parksmap-py   parksmap-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}             parksmap   8080-tcp
 ----
 
 You can also verify the *Route* by looking at the project in the OpenShift web console:
