--- a/modules/permissions.adoc
+++ b/modules/permissions.adoc
@@ -23,7 +23,7 @@ The parksmap application wants to talk to the OpenShift API to learn about other
 
 [source]
 ----
-oc project {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}
+oc project userXXX-parks
 ----
 
 Then:
@@ -43,7 +43,7 @@ we are using a special flag, `-z`. What does this flag do? From the `-h` output:
 
 The `-z` syntax is a special one that saves us from having to type out the
 entire string, which, in this case, is
-`system:serviceaccount:{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}:default`. It's a nifty shortcut.
+`system:serviceaccount:userXXX-parks:default`. It's a nifty shortcut.
 
 [NOTE]
 ====
@@ -58,11 +58,11 @@ of supressing the error message! Although, in reality, we fixed the application.
 ### Exercise: Grant User View Permissions
 If you create a project, you are that project's administrator. This means that
 you can grant access to other users, too. If you like, give your neighbor view
-access to your `explore` project using the following command:
+access to your `userXXX-parks` project using the following command:
 
 [source]
 ----
-oc policy add-role-to-user view user{{SUFFIX}}
+oc policy add-role-to-user view userXXX
 ----
 
 Have them go to the project view by clicking the *Projects* button and verify
@@ -74,9 +74,9 @@ production application's project.
 One more step is required. We need to re-deploy the application because it's
 given up trying to query the API.
 
-This time we'll use the web console. Find your `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project,
+This time we'll use the web console. Find your `userXXX-parks` project,
 and then click "Applications" and then "Deployments". You'll see your only
-application, `parksmap`, listed. Click that.
+application, `parksmap-py`, listed. Click that.
 
 The deployment screen tells you a lot about how the application will be
 deployed. At the top right, there is a button labeled "Deploy". This button will
