--- a/modules/codechanges.adoc
+++ b/modules/codechanges.adoc
@@ -8,60 +8,32 @@ remote systems in order to trigger builds. By pointing the code repository's
 hook at the OpenShift API, automated code/build/deploy pipelines can be
 achieved.
 
-#### Exercise: Configuring GitLab Web Hooks
+#### Exercise: Configuring GitHub Web Hooks
 
 
-{% if modules.pipelines %}
-In previous labs, you created a CI/CD Pipeline to automate build, test and deployment of
-the `nationalparks` application. In this lab you can use the pipline webhook to
-trigger a pipeline execution every time there is a change in the `nationalparks` GitLab
-repository. In the OpenShift web console, navigate to your `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` *Project*, and
-then mouse-over *Browse* and then *Pipelines*. Click the `nationalparks-pipeline` and
-then *Configuration* tab.
-
-On this screen you will see the option to copy the *generic* webhook URL as shown
-in the following image:
-
-image::/images/ocp-webhook1-pipeline.png[Webhook]
-{% else %}
-In the OpenShift web console, navigate to your `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` *Project*, and
+In the OpenShift web console, navigate to your `userXXX-parks` *Project*, and
 then mouse-over *Browse* and then *Builds*. Click the `nationalparks` build.
 
-On this screen you will see the option to copy the *generic* webhook URL as shown
+On this screen you will see the option to copy the *github* webhook URL as shown
 in the following image:
 
 image::/images/ocp-webhook1.png[Webhook]
-{% endif %}
+
 
 
 Once you have the URL copied to your clipboard, navigate to the code repository
-that you have on your local GitLab:
+that you have for your nationalparks-py project that you forked in a previous lab.
 
 
-{% if PARKSMAP_PY %}
-*link:http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks-py/tree/{{NATIONALPARKS_VERSION}}[]*
-{% else %}
-*link:http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks/tree/{{NATIONALPARKS_VERSION}}[]*
-{% endif %}
+Click the Settings link on the top right of the screen, and then click "Webhooks", and finally click on add webhook:
 
-[NOTE]
-====
-The credentials for this GitLab instance are:
-
-Username: {{GITLAB_USER}}
-
-Password: {{GITLAB_PASSWORD}}
-====
-
-Click the Settings link on the top right of the screen, and then click "Webhooks":
-
-image::/images/ocp-webhook2.png[Webhook]
+image::/images/ocp-webhook1-github.png[Webhook]
 
 In the next screen, paste your link into the "URL" field. You can leave the
 secret token field blank -- the secret is already in the URL and does not need
 to be in the payload.
 
-image::/images/ocp-webhook3.png[Webhook]
+**Note:  Also ensure that you select application/json as the Content Type**
 
 Scroll to the bottom of the page. Make sure you *un-check* the SSL verification
 box. Remember that OpenShift's API is not presenting an SSL certificate signed
@@ -70,7 +42,6 @@ webhook will fail.
 
 Finally, click on "Add webhook".
 
-image::/images/ocp-webhook4.png[Webhook]
 
 Boom! From now on, every time you commit new source code to your GitLab
 repository, a new build and deploy will occur inside of OpenShift.  Let's try
@@ -80,14 +51,13 @@ this out.
 
 {% if PARKSMAP_PY %}
 
-Click "Project" at the top of the GitLab page, and then "Files" towards the
-middle of the page. This is GitLab's repository view. Navigate to the root
+Click "Code" at the top of the GitHub page. This is GitHub's repository view. Navigate to the root
 path and click on the `wsgi.py` file.
 
 Once you have the file on the screen, click the edit button in the top right
-hand corner as shown here:
+hand corner as indication with the pencil icon:
 
-image::/images/ocp-webhook5-py.png[Webhook]
+image::/images/githubedit1.png[Webhook]
 
 Change line number 35:
 
@@ -182,7 +152,7 @@ automatically deployed by viewing the application in your browser:
 
 [source]
 ----
-http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/info
+http://nationalparks-userXXX-parks.apps.devconf.pixy.io/ws/info
 ----
 
 You should now see the new name you have set in the JSON string returned.
@@ -230,7 +200,7 @@ original header by viewing the application in your browser.
 
 [source]
 ----
-http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/info
+http://nationalparks-userXXX-parks.apps.devconf.pixy.io/ws/info
 ----
 
 [NOTE]
