--- a/modules/permissions.adoc
+++ b/modules/permissions.adoc
@@ -75,7 +75,7 @@ given up trying to query the API.
 
 This time we'll use the web console. Find your `USERNAME-parks` project,
 and then click "Applications" and then "Deployments". You'll see your only
-application, `parksmap-py`, listed. Click that.
+application, `parksmap`, listed. Click that.
 
 The deployment screen tells you a lot about how the application will be
 deployed. At the top right, there is a button labeled "Deploy". This button will
