--- a/modules/routes.adoc
+++ b/modules/routes.adoc
@@ -39,16 +39,16 @@ Now we need to get the *Service* name to expose:
 ----
 oc get services
 
-NAME       CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
-parksmap   172.30.169.213   <none>        8080/TCP   5h
+NAME          CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
+parksmap-py   172.30.169.213   <none>        8080/TCP   5h
 ----
 
 Once we know the *Service* name, creating a *Route* is a simple one-command task:
 
 [source]
 ----
-oc expose service parksmap
-route "parksmap" exposed
+oc expose service parksmap-py
+route "parksmap-py" exposed
 ----
 
 Verify the *Route* was created with the following command:
@@ -56,13 +56,13 @@ Verify the *Route* was created with the following command:
 [source]
 ----
 $ oc get route
-NAME       HOST/PORT                                              PATH      SERVICES   PORT       TERMINATION
-parksmap   parksmap-USERNAME-apps.xxxxxxx.pixy.io             parksmap   8080-tcp
+NAME          HOST/PORT                                             PATH      SERVICES   PORT       TERMINATION
+parksmap-py   parksmap-py-USERNAME-apps.xxxxxxx.pixy.io             parksmap-py   8080-tcp
 ----
 
 You can also verify the *Route* by looking at the project in the OpenShift web console:
 
-image::/images/parksmap-route.png[Route]
+image::/images/-route.png[Route]
 
 Pretty nifty, huh?  This application is now available at the above URL:
 
