--- a/modules/permissions.adoc
+++ b/modules/permissions.adoc
@@ -17,7 +17,7 @@ every pod that is launched. By changing the permissions for that service
 account, we can do interesting things.
 
 ### Exercise: Grant Service Account View Permissions
-The parksmap application wants to talk to the OpenShift API to learn about other
+The parksmap-py application wants to talk to the OpenShift API to learn about other
 *Pods*, *Services*, and resources within the *Project*. You'll learn why soon!
 
 [source]
@@ -75,7 +75,7 @@ given up trying to query the API.
 
 This time we'll use the web console. Find your `USERNAME-parks` project,
 and then click "Applications" and then "Deployments". You'll see your only
-application, `parksmap`, listed. Click that.
+application, `parksmap-py`, listed. Click that.
 
 The deployment screen tells you a lot about how the application will be
 deployed. At the top right, there is a button labeled "Deploy". This button will
@@ -84,7 +84,7 @@ right?).
 
 Click it.
 
-image::/images/new-parksmap-deploy.png[Deploy Button]
+image::/images/new-parksmap-py-deploy.png[Deploy Button]
 
 You'll see that a new deployment is immediately started. Return to the overview
 page and watch it happen. You might not be fast enough! If you look at the logs
