--- a/modules/python-github.adoc
+++ b/modules/python-github.adoc
@@ -1,7 +1,7 @@
 ## Lab: Deploying Python Code with GitHub
 
 ### Application Description
-In this lab, we're going to deploy a backend service, developed in Python programming language that will expose 2 main REST endpoints to the visualizer application (`parksmap` web component that was deployed in the previous labs). The application will query for national parks information (including it's coordinates) that is stored in a Mongo database.
+In this lab, we're going to deploy a backend service, developed in Python programming language that will expose 2 main REST endpoints to the visualizer application (`parksmap-py` web component that was deployed in the previous labs). The application will query for national parks information (including it's coordinates) that is stored in a Mongo database.
 This application will also provide an external access point, so that the API provided can be directly used by the end user.
 
 image::/images/roadshow-app-architecture-nationalparks-1.png[Application architecture,800,align="center"]
@@ -152,7 +152,7 @@ has finished (exited) and that an application *Pod* is in a ready and running st
 NAME                    READY     STATUS      RESTARTS   AGE
 nationalparks-1-tkid3   1/1       Running     3          2m
 nationalparks-1-build   0/1       Completed   0          3m
-parksmap-1-4hbtk        1/1       Running     0          2h
+parksmap-py-1-4hbtk        1/1       Running     0          2h
 ----
 
 If you look again at the web console, you will notice that, when you create the
@@ -170,7 +170,7 @@ Where you should see something like the following:
 ----
 NAME            HOST/PORT                                                   PATH      SERVICES        PORT       TERMINATION
 nationalparks   nationalparks-USERANME-parks.apps.xxxxxxx.pixy.io             nationalparks   8080-tcp
-parksmap        parksmap-USERNAME-parks.apps.xxxxxxxx.pixy.io                  parksmap        8080-tcp
+parksmap-py        parksmap-py-USERNAME-parks.apps.xxxxxxxx.pixy.io                  parksmap-py        8080-tcp
 ----
 
 In the above example, the URL is:
