--- a/modules/python-github.adoc
+++ b/modules/python-github.adoc
@@ -1,7 +1,7 @@
 ## Lab: Deploying Python Code with GitHub
 
 ### Application Description
-In this lab, we're going to deploy a backend service, developed in Python programming language that will expose 2 main REST endpoints to the visualizer application (`parksmap-py` web component that was deployed in the previous labs). The application will query for national parks information (including it's coordinates) that is stored in a Mongo database.
+In this lab, we're going to deploy a backend service, developed in the Python programming language that will expose 2 main REST endpoints to the visualizer application (`parksmap-py` web component that was deployed in the previous labs). The application will query for national parks information (including it's coordinates) that is stored in a Mongo database.
 This application will also provide an external access point, so that the API provided can be directly used by the end user.
 
 image::/images/roadshow-app-architecture-nationalparks-1.png[Application architecture,800,align="center"]
